SPK/css/SPK.header.css
/* ... */
.second-level-menu>li {
	position: relative;
	border-bottom: 1px solid rgba(0, 0, 0, .3);
}

.second-level-menu>li:hover {
	background-color: rgb(121, 121, 121);
}

.third-level-menu {
	background-color: #fff;
	position: absolute;
	top: 0px;
	left: 100%;
	min-width: 10em;
	list-style: none;
	padding: 0;
	margin: 0;
	display: none;
}

.third-level-menu a {
	color: #333;
}

.third-level-menu>li {
	border-bottom: 1px solid rgba(0,0,0,.3);
	background-color: hsla(0,0%,80%,0.98);
	position: relative;
}

.third-level-menu>li a:hover {
	background-color: rgba(0,0,0,.1)!important;
	color: #000!important;
}

#desktop-menu {
	position: relative;
	left: auto;
	top: auto;
	width: auto;
	height: auto;
	padding-left: 82px;
}

#warning {
	display: none;
	position: relative;
	left: 0;
	width: 100%;
	padding: 1em;
	border: 5px solid black;
	background-color: darkred;
	color: white;
	text-align: center;
	box-sizing: border-box;
}

#notice {
	display: none;
	position: relative;
	left: 0;
	width: 100%;
	padding: 1em;
	border: 5px solid black;
	background-color: darkorange;
	color: black;
	text-align: center;
	box-sizing: border-box;
}

#main-search {
	bottom: 10px;
	position: absolute;
	right: 15px;
}

#main-search input[type='text'] {
    background: hsla(0,0%,100%,.2);
    border: none;
    color: #ccc;
    font-size: 14px;
    padding: 2px 8px;
    width: 150px;
	outline-offset: -2px;
	height: revert;
}

#main-search button {
    color: #ccc;
	cursor: pointer;
	background-color: inherit;
	border: inherit;
	padding: 0;
}

input:focus {
    box-shadow: 0 0 0 0 #d3d3d3!important;
    font-weight: 700;
    outline: 1px solid #d3d3d3!important;
}

#mobile-menu-trigger, #search-form-trigger {
    color: #ccc!important;
    display: inline-block;
    width: 30px;
    text-align: right;
}

/* Mobile Settings */

@media only screen and (max-width: 768px) {
	#notice,#warning {
		top: 109px;
	}

	#mobile-menu {
		position: absolute;
		right: 15px;
		top: 0;
		line-height: 50px!important;
		text-align: right;
		display: inline-block;
	}

	#mobileNav {
		display: initial;
	}

	#main-search {
		background: #000;
		border: 1px solid #555;
		box-shadow: 0 3px 10px rgba(0,0,0,.25);
		height: 60px;
		opacity: 0;
		padding: 16px;
		position: absolute;
		right: -220px;
		top: 68px;
		transition: right .2s ease-in-out;
		width: 206px;		
	}

	#main-search.search-open {
		opacity: 1;
		right: 16px;
		top: 36px;
		z-index: 50;
	}

	#search-form-trigger.search-open span::before {
		content: "";
		margin-right: 4px;
	}

	.burger-bar {
		display: inline-block;
	}

	.page-title {
		font-size: 16pt;
	}

	.page-wrap {
		padding-top: 109px;
	}

	#desktop-menu {
		display: none;
	}

	.divider {
		display: none;
	}

	.main-bar {
		height: 50px;
	}

	.site-logo {
		float: left;
		position: absolute;
		top: 5px;
		width: 50px;
	}
	.site-logo img {
		width: auto;
		margin-bottom: 5px;
		height: 40px!important;
	}

	.reg {
		left: 53px;
		top: 28.5px;
		color: hsla(0,0%,100%,0.5)
	}

	.sub-header {
		width: 100%;
		padding: 0;
		flex-direction: column;
	}

	.site-title .header-float {
		margin-left: auto;
		margin-right: auto;
		height: auto;
	}

	.site-title {
		background-color: rgba(51, 51, 51, 0.95);
		padding: 5px 0;
		color: #e5e1e1;
		height: auto;
		line-height: 28px;
	}

	.site-area {
		display: flex;
		margin-left: 0;
		font-size: 18px;
		line-height: inherit;
		margin-top: 0;
		margin-bottom: 1px;
	}

	.site-name {
		display: flex;
		font-size: 18px;
		line-height: 12px;
		margin-top: 8px;
		color: inherit;
		margin-left: 0;
	}

	.options-block {
		display: block;
	}

	.mobile-hide {
		display: none;
	}

	.collapsible {
		width: 100% !important;
		height: 3vh !important;
		text-align: left !important;
	}

	.collapsible:before {
		margin-left: 0.5vw;
		margin-right: 2vw;
		text-align: match-parent;
		vertical-align: middle;
	}

	.menu-item, .sub-menu {
		border-left: 3px solid hsla(0,0%,100%,.3);
		border-bottom: 1px solid hsla(0,0%,100%,.3);
		min-height: 48px;
		line-height: 48px;
	}
	
	.menu-item:not(.content-mobile), .sub-menu{
		padding: 0.25em 3.0em;
	}
	.mobile-top-level-menu {
		position: relative;
		min-height: 48px;
		line-height: 48px;
		border-bottom: 1px solid hsla(0,0%,100%,.3);
	}

}

@media only screen and (max-width: 502px) {
	#notice,#warning {
		top: 124.5px;
	}

	.page-wrap {
		padding-top: 125px;
	}

	.site-area {
		line-height: 20px;
		margin-top: 3.5px;
	}
}

